# GST_Tacotron2

./: Attention_Weights_Template_Analysis.csv  Decoder.py  Encoder.py  GST.py  INFERENCE_SYNTHESIS.py  INFERENCE_SYNTHESIS_GRIFFINLIM.py  INFERENCE_SYNTHESIS_ISOLATED_TOKENS.py  INFERENCE_SYNTHESIS_NEW.py  INFERENCE_SYNTHESIS_TEMPLATES.py  MAIN.py  Postnet.py  README.md  Tacotron2.py  data_preparation.py  distributed.py  fp16_optimizer.py  hyper_parameters.py  logger.py  loss_function.py  loss_scaler.py  nn_layers.py  plotting_utils.py  pyproject.toml  requirements.txt  stft.py  training.py  utils.py
filelists/: ljs_audio_text_test_filelist.txt  ljs_audio_text_train_filelist.txt  ljs_audio_text_val_filelist.txt
waveglow/: inference.py  mel2samp.py
